--- a/blog-stylesheets.css
+++ b/blog-stylesheets.css
@@ -1,8 +1,9 @@
 .html {
   background-color: white;
 }
-#wrapper {
+wrapper {
 	display: block;
+	background-color: red;
 	width: 960px;
 	margin-left:auto;
 	margin-right:auto;
@@ -11,18 +12,17 @@
 .header {
 	position:static;
 	height: 150px;
-	position: fixed;
 	display: inline-block;
 	background-color: red;
 }
-#content {
+content {
   	width:660px;
   }
-#leftcol {
+leftcol {
 	float: left;
 	width: 300px;
 }
-#rightcol {
+rightcol {
 	float: right;
 	width: 300px;
 }
