--- a/stylesheets/blog-stylesheets.css
+++ b/stylesheets/blog-stylesheets.css
@@ -1,39 +1,66 @@
 html {
   background-color: white;
-  margin: 0;
-  padding: 0;
   height: 100%;
 }
 body {
-
+	margin: 0;
+	padding: 0;
+}
+h1 {
+	font-size: 24px;
+	color: white;
+}
+h2 {
+	font-size: 18px;
+	color:white;
+}
+h3{
+	font-size: 26px;
+	color: white;
+}
+h4 {
+	font-size: 20px;
+}
+h5 {
+	text-align: right;
+	font-size: 18px;
+	font-family: arial;
 }
 .wrapper {
-	background-color: white;
+	background: url(/Users/richardsantin/Documents/DBCGits/ridou.github.io/img/black_wood.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 	width: 100%;
-	margin: 10px auto;
 	height: 100%;
 }
 header {
+	background: url(/Users/richardsantin/Documents/DBCGits/ridou.github.io/img/devbootcamp.jpg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 	min-height: 130px;
-	background-color: yellow;
+	text-align: center;
+	padding: 15px;
+	
 }
 .container {
-	background-color: white;
 	min-height: 600px;
 	overflow: hidden;
 	height:80%;
   }
 .leftcol {
 	min-height: 600px;
-	background-color: green;
 	float: left;
 	width: 200px;
 	text-align: center;
+	background: #7f7f7f;
+	background: rgba(0,0,0,0.35);
+	color: white;
 }
 .leftcol ul {
-	background-color: beige;
 	list-style-type: none;
 	min-height: 550px;
+	background: #7f7f7f;
+	background: rgba(0,0,0,0.35);
 }
 .leftcol ul li {
 	display: inline-block;
@@ -60,7 +87,7 @@ header {
 	font-weight:bold;
 	padding:7px 25px;
 	text-decoration:none;
-	text-shadow:0px 2px 0px #810e05;
+	text-shadow:0px 1px 0px #810e05;
 	-moz-border-radius-bottomleft: 15px;
 	-webkit-border-bottom-left-radius: 15px;
 	border-bottom-left-radius: 15px;
@@ -105,22 +132,50 @@ header {
 }
 .rightcol {
 	min-height: 600px;
-	background: lightblue;
+	background: #7f7f7f;
+	background: rgba(0,0,0,0.35);
 	float:right;
 	width: 200px;
+	text-align: center;
+	color: white;
 }
 .rightcol ul {
-	background-color: beige;
+	background: #7f7f7f;
+	background: rgba(0,0,0,0.35);
 	list-style-type: none;
+	min-height: 550px;
 
 }
 .rightcol ul li {
 	position: relative;
 	display: inline-block;
   	position: relative;
+  	float:right;
   	-webkit-transform: translateZ(0);
   	transform: translateZ(0);
-  	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  	b-moz-box-shadow:inset 0px 0px 5px 0px #f5978e;
+	-webkit-box-shadow:inset 0px 0px 10px 0px #f5978e;
+	box-shadow:inset 0px 0px 5px 0px #f5978e;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f24537), color-stop(1, #c62d1f));
+	background:-moz-linear-gradient(top, #f24537 5%, #c62d1f 100%);
+	background:-webkit-linear-gradient(top, #f24537 5%, #c62d1f 100%);
+	background:-o-linear-gradient(top, #f24537 5%, #c62d1f 100%);
+	background:-ms-linear-gradient(top, #f24537 5%, #c62d1f 100%);
+	background:linear-gradient(to bottom, #f24537 5%, #c62d1f 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f24537', endColorstr='#c62d1f',GradientType=0);
+	background-color:#f24537;
+	border:1px solid #d02718;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Courier New;
+	font-size:15px;
+	font-weight:bold;
+	padding:7px 25px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #810e05;
+	-moz-border-radius-bottomright: 15px;
+	-webkit-border-bottom-right-radius: 15px;
+	border-bottom-right-radius: 15px;
 	
 }
 .rightcol ul li:before {
@@ -155,36 +210,76 @@ header {
 	text-decoration: none;
 	width: 150px;
 	line-height: 20px;
+	color: black;
 }
 .rightcol ul li a:hover {
-	background-color: red;
+
 }
 .centercol {
-	background-color: red;
-	min-height: 600px;
+	min-height: 565px;
 	margin-left: 200px;
 	margin-right: 200px;
 }
 .content {
-	margin: auto;
-	padding: 15px;
+	margin-top: 75px;
+	padding: 10px;
 	text-align: center;
+	background: #7f7f7f;
+	background: rgba(0,0,0,0.5);
+	color: white;
 }
 footer {
 	min-height:260px;
-	background-color: purple;
 	overflow: hidden;
+	background-color: white;
+	background: rgba(0,0,0,0.4);
 }
-.calendar {
-	float: right;
+#gcalendar {
+	display: inline-block;
+	width: 460px;
+	height: 270px;
 	margin: 10px;
-	position: relative;
-	overflow: hidden;
 }
-.calendar iframe,{
-	position: absolute;
-	bottom: 0;
-	right: 0;
-	width: 100% !important;
-	height: 100% !important;
+#contactlist{
+	min-width: 520px;
+	height: 270px;
+	overflow: hidden;
+	float:right;
+	display: block;
+	padding-left: 60px;
+	text-align: center;
+	bottom: 30px;
+}
+.button{
+  top:-10px;
+}
+#twitter {
+  display: inline-block;
+  padding-top:75px;
+  margin:10px;
+  height:100px;
+  width:100px;
+}
+#linkedin {
+  display:inline-block;
+  padding-top:75px;
+  width:100px;
+  height:100px;
+  margin:8px;
+}
+#google {
+  display:inline-block;
+  padding-top:75px;
+  width:100px;
+  margin:5px;
+  left:8px;
+  height:100px;
+}
+#github {
+  display:inline-block;
+  padding-top:75px;
+  width:100px;
+  height:100px;
+  margin:10px;
+  left:8px;
 }
