--- a/stylesheets/blog-stylesheets.css
+++ b/stylesheets/blog-stylesheets.css
@@ -27,14 +27,14 @@ h5 {
 	font-family: arial;
 }
 .wrapper {
-	background: url(/Users/richardsantin/Documents/DBCGits/ridou.github.io/img/black_wood.jpg);
+	background: url(https://raw.githubusercontent.com/ridou/ridou.github.io/master/img/black_wood.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
 	width: 100%;
 	height: 100%;
 }
 header {
-	background: url(/Users/richardsantin/Documents/DBCGits/ridou.github.io/img/devbootcamp.jpg);
+	background: url(https://raw.githubusercontent.com/ridou/ridou.github.io/master/img/devbootcamp.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
 	min-height: 130px;
