--- a/stylesheets/blog-stylesheets.css
+++ b/stylesheets/blog-stylesheets.css
@@ -8,11 +8,11 @@ body {
 	padding: 0;
 }
 h1 {
-	font-size: 24px;
+	font-size: 28px;
 	color: white;
 }
 h2 {
-	font-size: 18px;
+	font-size: 22px;
 	color:white;
 }
 h3{
@@ -25,7 +25,9 @@ h4 {
 h5 {
 	text-align: right;
 	font-size: 18px;
-	font-family: arial;
+}
+h6 {
+	font-size: 18px;
 }
 .wrapper {
 	background: url(https://raw.githubusercontent.com/ridou/ridou.github.io/master/img/black_wood.jpg);
@@ -227,7 +229,10 @@ header {
 	background: #7f7f7f;
 	background: rgba(0,0,0,0.5);
 	color: white;
-	padding: 75px;
+	padding-left: 175px;
+	padding-right: 175px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 footer {
 	min-height:260px;
