--- a/stylesheets/blog-stylesheets.css
+++ b/stylesheets/blog-stylesheets.css
@@ -33,7 +33,7 @@ h6 {
 	font-style: bold;
 }
 #wrapper {
-	background: url(https://raw.githubusercontent.com/ridou/ridou.github.io/master/img/black_wood.jpg);
+	background: url(https://raw.githubusercontent.com/ridou/ridou.github.io/master/img/black_wood.png);
     background-size: 100% 100%;
 	width: 100%;
 	height: 100%;
@@ -227,6 +227,7 @@ header {
 	padding-right: 175px;
 	padding-top: 50px;
 	height: 100%;
+	overflow: auto;
 }
 footer {
 	min-height:260px;
@@ -241,12 +242,12 @@ footer {
 	margin: 10px;
 }
 #contactlist{
-	min-width: 520px;
+	max-width: 480px;
 	height: 270px;
 	overflow: hidden;
 	float:right;
 	display: block;
-	padding-left: 60px;
+	padding-top: 120px;
 	text-align: center;
 	bottom: 30px;
 }
@@ -255,21 +256,21 @@ footer {
 }
 #twitter {
   display: inline-block;
-  padding-top:75px;
+  padding-top:5px;
   margin:10px;
   height:100px;
   width:100px;
 }
 #linkedin {
   display:inline-block;
-  padding-top:75px;
+  padding-top:5px;
   width:100px;
   height:100px;
   margin:8px;
 }
 #google {
   display:inline-block;
-  padding-top:75px;
+  padding-top:5px;
   width:100px;
   margin:5px;
   left:8px;
@@ -277,7 +278,7 @@ footer {
 }
 #github {
   display:inline-block;
-  padding-top:75px;
+  padding-top:5px;
   width:100px;
   height:100px;
   margin:10px;
