--- a/stylesheets/blog-stylesheets.css
+++ b/stylesheets/blog-stylesheets.css
@@ -33,7 +33,7 @@ h6 {
 	font-style: bold;
 }
 #wrapper {
-	background: url(https://raw.githubusercontent.com/ridou/ridou.github.io/master/img/black_wood.png);
+	background: url(https://raw.githubusercontent.com/ridou/ridou.github.io/master/img/black_wood.jpg);
     background-size: 100% 100%;
 	width: 100%;
 	height: 100%;
